outlining basic structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
         <title>DashBoard</title>
     </head>
     <body>
-        
+        <!-- L'HEADER COMPRENDE LA NAV BIANCA FISSA IN ALTO -->
+        <header>
+            <nav>
+            </nav>
+        </header>
+        <!-- IL MAIN COMPRENDE UN ASIDE FISSO A SINISTRA E UN CONTENUTO FISSO PRINCIPALE CON OVERFLOW A DESTRA, IL MAIN È ALTO 100VH - HEADER -->
+        <main>
+            <!-- NELL'ASIDE A SINISTRA C'È UNA NAV VERTICALE -->
+            <aside>
+                <nav>
+                </nav>
+            </aside>
+            <!-- ALLA DESTRA DELL'ASIDE IL MAIN DEL MAIN AVRÀ WIDTH 100% - ASIDE -->
+            <main>
+                <!-- IL MAIN DEL MAIN COMPRENDE UN HEADER BLU -->
+                <header>
+                </header>
+                <!-- E UN DIV IN FLEX CHE, A SUA VOLTA, CONTIENE DUE ASIDE -->
+                <div>
+                    <!-- I DUE ASIDE SONO FLEX ITEM, E CONTENGONO LE VARIE SEZIONI DEL MAIN -->
+                    <aside>
+                    </aside>
+                    <aside>
+                    </aside>
+                    <!-- IL DIV È IN FLEX WRAP E GLI ASIDE SONO IN WIDTH 100%, DIVENTANO 65% E 35% SOLO DA LG IN POI -->
+                </div>
+            </main>
+        </main>
     </body>
 </html>
