navbar fully responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <!-- NAV BIANCA FISSA IN ALTO -->
         <nav class="my_nav-top d-flex align-items-center">
-            <div class="my_container d-flex">
+            <div class="my_nav-container d-flex">
                 <div class="my_logo-cont">
                     <img src="img/mobile-logo.png" class="my_logo" alt="boolean logo">
                 </div>
@@ -23,8 +23,25 @@
                         <i class="fa-solid fa-magnifying-glass my_lens" style="color: #6a6a6a;"></i>
                     </div>
                 </div>
+                <div class="my_menu">
+                    <a href="#">
+                        <i class="fa-solid fa-bars"></i>
+                    </a>
+                </div>
+                <div class="my_info">
+                    <a href="#">
+                        <i class="fa-solid fa-circle-info"></i>
+                    </a>
+                </div>
+                <div class="my_more">
+                    <a href="#">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </a>
+                </div>
                 <div class="my_notif d-flex">
-                    <i class="fa-solid fa-bell m-auto" style="color: #ff8f00;"></i>
+                    <a href="#">
+                        <i class="fa-solid fa-bell m-auto"></i>
+                    </a>
                 </div>
             </div>
         </nav>
