general code improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img src="img/mobile-logo.png" class="my_logo" alt="boolean logo">
                 </div>
                 <div class="my_search d-flex">
-                    <div class="my_pippo m-auto">
+                    <div class="my_searchbar-box m-auto">
                         <input type="text" name="search" class="my_searchbar" placeholder="Prova a cercare: Lezioni di Laravel">
                         <i class="fa-solid fa-magnifying-glass my_lens" style="color: #6a6a6a;"></i>
                     </div>
