responsive main sidebar

--- a/index.html
+++ b/index.html
@@ -47,23 +47,27 @@
         </nav>
         <!-- IL MAIN COMPRENDE UN ASIDE FISSO A SINISTRA E UN CONTENUTO FISSO PRINCIPALE CON OVERFLOW A DESTRA, IL MAIN È ALTO 100VH - HEADER ED È D-FLEX -->
         <main class="my_overflow-box d-flex">
-            <!-- NELL'ASIDE A SINISTRA C'È UNA SIMIL-NAV VERTICALE -->
+            <!-- L'ASIDE A SINISTRA RAPPRESENTA UNA SIDEBAR -->
             <aside class="my_sidebar">
                 <div class="my_asd-container d-flex flex-column">
                     <section class="my_upper">
                         <a href="#" class="my_upper-icons">
                             <i class="fa-solid fa-house"></i>
+                            <p>Home</p>
                         </a>
                         <a href="#" class="my_upper-icons">
                             <i class="fa-solid fa-chart-simple"></i>
+                            <p>Stats</p>
                         </a>
                         <a href="#" class="my_upper-icons">
                             <i class="fa-solid fa-signal"></i>
+                            <p>Signals</p>
                         </a>
                     </section>
                     <section class="my_lower">
                         <a href="#" class="my_upper-icons">
                             <i class="fa-solid fa-gear"></i>
+                            <p>Admin</p>
                         </a>
                     </section>
                 </div>
