--- a/index.html
+++ b/index.html
@@ -76,6 +76,45 @@
             <main class="my_main-content">
                 <!-- IL MAIN DEL MAIN COMPRENDE UN HEADER BLU -->
                 <header class="my_main-header">
+                    <div class="my_main-header-container d-flex">
+                        <div class="my_main-header-item">
+                            <a href="#" class="my_new-stud">
+                                Nuovo Studente
+                            </a>
+                            <a href="#" class="my_plus">
+                                +
+                            </a>
+                        </div>
+                        <div class="my_main-header-item">
+                            <div class="my_header-upper">
+                                <a href="#" class="my_Boolean">
+                                    Boolean
+                                </a>
+                                <a href="#" class="my_main-header-pill">
+                                    Piano blaze
+                                </a>
+                            </div>
+                            <div class="my_header-lower">
+                                <a href="#" class="my_main-header-pill">
+                                    3 app
+                                </a>
+                                <span class="text-white">
+                                    >>
+                                </span>
+                                <a href="#" class="my_main-header-pill">
+                                    +
+                                </a>
+                            </div>
+                        </div>
+                        <div class="my_main-header-item">
+                            <p class="my_studs">
+                                Studenti online negli ultimi 30 minuti
+                            </p>
+                            <p class="my_studs-nr">
+                                125
+                            </p>
+                        </div>
+                    </div>
                 </header>
                 <!-- E UN DIV IN FLEX CHE, A SUA VOLTA, CONTIENE DUE ASIDE -->
                 <div class="my_bigAsidesBox">
