--- a/index.html
+++ b/index.html
@@ -77,42 +77,48 @@
                 <!-- IL MAIN DEL MAIN COMPRENDE UN HEADER BLU -->
                 <header class="my_main-header">
                     <div class="my_main-header-container d-flex">
-                        <div class="my_main-header-item">
-                            <a href="#" class="my_new-stud">
-                                Nuovo Studente
-                            </a>
-                            <a href="#" class="my_plus">
-                                +
-                            </a>
-                        </div>
-                        <div class="my_main-header-item">
-                            <div class="my_header-upper">
-                                <a href="#" class="my_Boolean">
-                                    Boolean
+                        <div class="my_main-header-item d-flex">
+                            <div>
+                                <a href="#" class="my_new-stud">
+                                    Nuovo Studente
                                 </a>
-                                <a href="#" class="my_main-header-pill">
-                                    Piano blaze
-                                </a>
-                            </div>
-                            <div class="my_header-lower">
-                                <a href="#" class="my_main-header-pill">
-                                    3 app
-                                </a>
-                                <span class="text-white">
-                                    >>
-                                </span>
-                                <a href="#" class="my_main-header-pill">
+                                <a href="#" class="my_plus">
                                     +
                                 </a>
                             </div>
                         </div>
-                        <div class="my_main-header-item">
-                            <p class="my_studs">
-                                Studenti online negli ultimi 30 minuti
-                            </p>
-                            <p class="my_studs-nr">
-                                125
-                            </p>
+                        <div class="my_main-header-item d-flex">
+                            <div>
+                                <div class="my_header-upper">
+                                    <a href="#" class="my_Boolean">
+                                        Boolean
+                                    </a>
+                                    <a href="#" class="my_main-header-pill">
+                                        Piano blaze
+                                    </a>
+                                </div>
+                                <div class="my_header-lower">
+                                    <a href="#" class="my_main-header-pill">
+                                        3 app
+                                    </a>
+                                    <span class="text-white">
+                                        >>
+                                    </span>
+                                    <a href="#" class="my_main-header-pill">
+                                        +
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my_main-header-item d-flex">
+                            <div>
+                                <p class="my_studs">
+                                    Studenti online negli ultimi 30 minuti
+                                </p>
+                                <p class="my_studs-nr">
+                                    125
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </header>
