added faq mobile section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,33 @@
                     <aside class="my_lt-bigAside">
                     </aside>
                     <aside class="my_rt-bigAside">
+                        <div class="my_asidesContainer">
+                            <section class="my_faq">
+                                <header class="my_faq-header">
+                                    F.A.Q.
+                                </header>
+                                <main class="my_faq-questions">
+                                    <a href="#" class="my_question">
+                                        <div class="my_question-container">
+                                            Come aggiungere un nuovo studente?
+                                        </div>
+                                        <i class="fa-solid fa-chevron-down"></i>
+                                    </a>
+                                    <a href="#" class="my_question">
+                                        <div class="my_question-container">
+                                            Come posso accedere alla informazioni del mio account?
+                                        </div>
+                                        <i class="fa-solid fa-chevron-down"></i>
+                                    </a>
+                                    <a href="#" class="my_question">
+                                        <div class="my_question-container">
+                                            Posso usare questa dashboard da mobile?
+                                        </div>
+                                        <i class="fa-solid fa-chevron-down"></i>
+                                    </a>
+                                </main>
+                            </section>
+                        </div>
                     </aside>
                     <!-- IL DIV È IN FLEX WRAP E GLI ASIDE SONO IN WIDTH 100%, DIVENTANO 65% E 35% SOLO DA LG IN POI -->
                 </div>
