added statistics mobile section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,52 @@
                                     </a>
                                 </main>
                             </section>
+                            <section class="my_todo">
+                                <header class="my_todo-header">
+                                    Todo
+                                </header>
+                                <main class="my_stuff-todo">
+                                    <div class="my_stuff">
+                                        <input type="checkbox" name="kickoff">
+                                        <span>Kickoff nuove classi</span>
+                                    </div>
+                                    <div class="my_stuff">
+                                        <input type="checkbox" name="lesson">
+                                        <span>Lezione su Bootstrap 5 in Classe #98</span>
+                                    </div>
+                                    <div class="my_stuff">
+                                        <input type="checkbox" name="username">
+                                        <span>Controllare username GitHub studenti</span>
+                                    </div>
+                                </main>
+                            </section>
+                            <section class="my_statistics">
+                                <header class="my_stats-header">
+                                    <div class="my_asidesContainer">
+                                        <img src="img/stats.jpeg" class="my_stats-img" alt="mstatistics graph">
+                                        <div class="my_active-users">
+                                            Utenti attivi
+                                        </div>
+                                        <div class="my_active-users-list">
+                                            Lista degli utenti attivi in piattaforma nell'ultimo mese
+                                        </div>
+                                        <div class="my_usersPerMonth">
+                                            Gennaio: 1200
+                                        </div>
+                                        <div class="my_usersPerMonth">
+                                            Febbraio: 800
+                                        </div>
+                                        <div class="my_usersPerMonth">
+                                            Marzo: 1500
+                                        </div>
+                                        <div class="my_usersPerMonth">
+                                            <a href="#">
+                                                Visualizza report approfondito
+                                            </a>
+                                        </div>
+                                    </div>
+                                </header>
+                            </section>
                         </div>
                     </aside>
                     <!-- IL DIV È IN FLEX WRAP E GLI ASIDE SONO IN WIDTH 100%, DIVENTANO 65% E 35% SOLO DA LG IN POI -->
