improved main asides responsiveness

--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
                     </div>
                 </header>
                 <!-- E UN DIV IN FLEX CHE, A SUA VOLTA, CONTIENE DUE ASIDE -->
-                <div class="my_bigAsidesBox">
+                <div class="my_bigAsidesBox d-flex">
                     <!-- I DUE ASIDE SONO FLEX ITEM, E CONTENGONO LE VARIE SEZIONI DEL MAIN -->
                     <aside class="my_lt-bigAside">
-                    </aside>
-                    <aside class="my_rt-bigAside">
                         <div class="my_asidesContainer">
                             <section class="my_faq">
                                 <header class="my_faq-header">
@@ -154,6 +152,10 @@
                                     </a>
                                 </main>
                             </section>
+                        </div>
+                    </aside>
+                    <aside class="my_rt-bigAside">
+                        <div class="my_asidesContainer">
                             <section class="my_todo">
                                 <header class="my_todo-header">
                                     Todo
